--- a/client/cardsGame/table/table.scss
+++ b/client/cardsGame/table/table.scss
@@ -1,5 +1,5 @@
 .Table {
-  min-height: 500px;
+  min-height: 460px;
   background: #FCE4CA;
   position: relative;
 
